# python-update-checker

./: .gitignore  Makefile  README.md  pcu  pyproject.toml
src/pcu/: __init__.py  cli.py  dependencies.py  logging.py  main.py  pyprojecttoml.py  requirementstxt.py  uvlock.py
src/puc/: __init__.py  cli.py  dependencies.py  logging.py  pyprojecttoml.py  requirementstxt.py  uvlock.py
tests/: test_latest.py  test_pyproject_toml.py  test_requirements_txt.py  test_uv_lock.py
tests/data/: pyproject.toml  pyproject_compatible.toml  requirements.txt
