[project]
name = "python-update-checker"
version = "0.5"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license_files = [
    "COPYING",
]
readme = "README.md"
# https://pypi.org/classifiers/
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
  # track compatibility for dependencies, do not pin
  "packaging>=26.1",
]

[project.scripts]
puc = "puc:cli.main"

[dependency-groups]
# these packages are only needed for development
dev = [
  # for python code linting
  "ruff==0.15.12",
  # for python type checking
  "ty==0.0.34",
  # for testing
  "pytest==9.0.3",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "puc"
source-include = [
  ".gitignore",
  ".ruff.toml",
  "Makefile",
  "scripts/**",
  "tests/**",
]

[tool.project]
# pin versions of Python and uv for development
python_version_dev = "3.14.4"
uv_version_dev = "0.11.11"
