[project]
name = "test"
version = "0.1"
requires-python = ">=3.11"
dependencies = [
  # pinned
  "argcomplete==3.6.1",
  # windows only, using environment marker
  "pywin32==310; os_name=='nt'",
  # arbitrary equality
  "certifi===2026.1.4",

  # unpinned
  "requests",
  # loose pinned
  "Django >=5",
  # multi-version pinned
  "sphinx >8,<9",
  # URL referenced
  "urllib3 @ https://example.com/urllib3/urllib3/archive/refs/tags/1.26.8.zip",
]

[project.optional-dependencies]
gui = [
  # optional dependency, whitespace after operator
  "ty== 0.0.29",
]
tensor = [
  # python platform and version marker
  "tensorflow==2.14.0; sys_platform=='darwin' and python_version>='3.11'",
]

[dependency-groups]
dev = [
  # dependency group, whitespace before operator
  "ruff ==0.15.9",
  # package with extra and wildcard version
  "pytest-xdist[psutil]==3.7.*",
  # project dependency
  "test",
]

env_dev = [
  {include-group = "dev"},
]